# parkinsons-detection

./: .gitignore  README.md  pyproject.toml
config/: paths.py
models/: parkinsons_xgb.joblib
notebooks/: 01-eda-parkinsons.ipynb  02-model-training-and-report.ipynb  eda-parkinsons.ipynb
reports/: parkinsons_feature_importance.csv
src/: config.py  paths.py
src/data/: make_dataset.py
src/models/: io.py  train_model.py  train_pipeline.py  trains_pipeline.py
src/visualization/: visualize.py
